...
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
...
            android:id="@+id/edt_initial_mileage_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_initial_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_initial_mileage"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
        <!-- Suspend -->
...
