<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Jan Kühle

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_24dp"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_delete">
    </item>
    <item
        android:id="@+id/menu_cancel"
        android:icon="@drawable/ic_close_24dp"
        app:showAsAction="always|withText"
        android:title="@string/menu_cancel">
    </item>
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_check_24dp"
        app:showAsAction="always|withText"
        android:title="@string/menu_save">
    </item>

</menu>