...
            tools:layout_conversion_absoluteHeight="43dp"
            tools:layout_conversion_absoluteWidth="304dp"
            tools:layout_conversion_absoluteX="64dp"
            tools:layout_conversion_absoluteY="284dp"/>

        <Button
            android:id="@+id/btn_create_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_material_accent"
...
